--- a/index.html
+++ b/index.html
@@ -2,14 +2,37 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My title here!</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta content="text/html; charset=utf-8" http-equiv="Content-type" />
+
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/fonts.css" />
+
 </head>
 
 <body>
-  <p>Hello!!</p>
+  <div class="container">
+
+    <div class="welcome">
+    </div>
+    <div class="additional">
+    </div>
+    <div class="links">
+      <h3>links</h3>
+      <ul>
+        <li>email / <a href="https://mail.google.com/mail/u/1/">main</a>, <a
+            href="https://mail.google.com/mail/u/0/">side</a></li>
+      </ul>
+    </div>
+    <div class="below">
+      <h3>bgvhujikghfbuidlfshfguifdlhg???!?</h3>
+      <h4 id="date-display"></h4>
+    </div>
+    <div class="widget"></div>
+    <div class="other-widget"></div>
+  </div>
 </body>
+
+<script type="text/javascript" src="js/dateget.js"></script>
 
 </html>
